--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,7 @@
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.url filter=lfs diff=lfs merge=lfs -text
 *. too bad filter=lfs diff=lfs merge=lfs -text
+*.cpp filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.hpp filter=lfs diff=lfs merge=lfs -text
