--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@
 *.hpp filter=lfs diff=lfs merge=lfs -text
 *.ppt filter=lfs diff=lfs merge=lfs -text
 *.pptx filter=lfs diff=lfs merge=lfs -text
+*.tex filter=lfs diff=lfs merge=lfs -text
