--- a/.gitattributes
+++ b/.gitattributes
@@ -64,3 +64,6 @@
 *.gz filter=lfs diff=lfs merge=lfs -text
 *.cc filter=lfs diff=lfs merge=lfs -text
 *.sql filter=lfs diff=lfs merge=lfs -text
+*.nb filter=lfs diff=lfs merge=lfs -text
+*.JPG filter=lfs diff=lfs merge=lfs -text
+*.xlsx filter=lfs diff=lfs merge=lfs -text
