--- a/.gitattributes
+++ b/.gitattributes
@@ -77,3 +77,4 @@
 *.ans filter=lfs diff=lfs merge=lfs -text
 *.jsy filter=lfs diff=lfs merge=lfs -text
 *.m filter=lfs diff=lfs merge=lfs -text
+*.ahk filter=lfs diff=lfs merge=lfs -text
